# XCPlite

./: Setup.sh
C_Demo/: CMakeLists.txt  XCP_103.aml  ecu.c  ecu.h  main.c  xcp_cfg.h  xcptl_cfg.h
XCPlite/: CMakeLists.txt  main.c  main_cfg.h  xcpAppl.c  xcp_cfg.h  xcp_main.c  xcp_main.h  xcptl_cfg.h
src/: A2L.c  A2L.h  options.c  platform.c  util.c  xcpAppl.c  xcpAppl.h  xcpCanServer.c  xcpCanTl.c  xcpEthServer.c  xcpEthTl.c  xcpLite.c  xcpServer.c
